# cifar10

./: README.md  cnn.ipynb  linear_classifier.ipynb  linear_with_hidden.ipynb  notebook.ipynb  pyproject.toml  resnet18.ipynb  resnet34.ipynb
